--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@ngneat/overview": "^3.0.0",
     "apexcharts": "^3.35.5",
     "bootstrap": "^5.2.0",
+    "chart.js": "^4.0.1",
+    "ng2-charts": "^3.1.2",
     "ngx-mask": "^13.1.15",
     "rxjs": "~7.5.0",
     "tslib": "^2.4.0",
